# libvmi

./: valid_sys_call_table_entry
examples/: Makefile.am  get_dmesg.c  get_files.c  get_pid.c  get_procname.c  get_systable.c
libvmi/: libvmi.h
libvmi/config/: grammar.y  lexicon.l
libvmi/os/linux/: core.c  linux.h
sysmap/: System.map-2.6.24-26-generic
tools/linux-offset-finder/: Makefile  vmitest.c
